fix: Hide overflow in search result

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -167,6 +167,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	overflow: hidden;
 }
 
 .search-result-song-image-title-container {
